--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <p>Learn at your own pace with personal mentorship and immediate doubt clearing by your own dude.</p>
             </div>
-            <img id="first" src="guitar.png" height="400px" width="400px" alt="Flowers in Chania">
+            <img id="first" src="guitar.png" alt="Flowers in Chania">
         </div>
         <div class="container2 ">
             <div class="row1">
